# scruby

./: .gitignore  README.md  Usage.md  config.yaml  pyproject.toml
.github/workflows/: ci.yaml
specs/: 00-implementation-plan.md  01-project-setup-configuration.md  02-registry-factory-pattern.md  03-reader-components.md  04-writer-components.md  05-preprocessor-components.md  06-presidio-configuration.md  07-redactor-component.md  08-postprocessor-components.md  09-pipeline-orchestrator.md  10-cli-interface.md  11-integration-testing.md  12-post-cleanup.md  13-structured-data-support.md  14-structured-data-redesign.md  15-mendeley-testing-and-bugfixes.md  initial_spec.md
src/scruby/: __init__.py  cli.py  config.py  registry.py
src/scruby/pipeline/: __init__.py  pipeline.py
src/scruby/postprocessors/: __init__.py  base.py  dict_merger.py  format_preserver.py  redaction_cleaner.py  registry.py
src/scruby/preprocessors/: __init__.py  base.py  field_selector.py  registry.py  text_cleaner.py  whitespace.py
tests/: __init__.py  test_cli.py  test_config.py  test_entity_config.py  test_integration.py  test_mendeley.py  test_mendeley_text.py  test_pipeline.py  test_postprocessors.py  test_preprocessors.py  test_presidio.py  test_readers.py  test_redactor.py  test_registry.py  test_structured_integration.py  test_writers.py
tests/data/: README.md  cli_test.txt  employee_info.txt  medical_record.txt  mendeley_testing_dataset.xlsx  patient_record.txt  repeated_entities.txt  simple_patient.txt  snapshot_expected.txt  snapshot_input.txt  test_patients.csv  whitespace_test.txt
tests/fixtures/: hash_consistency_config.yaml  invalid_config.yaml  mendeley_config.yaml  mendeley_text_config.yaml  sample1.txt  sample2.txt  snapshot_config.yaml  structured_config.yaml  test_config.yaml
(+23 files in other folders)
